--- a/my-ehr/src/componets/HamburgerMenu/SideDrawer.css
+++ b/my-ehr/src/componets/HamburgerMenu/SideDrawer.css
@@ -28,7 +28,7 @@
 .side-drawer a{
     color: rgba(106,0,148);
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 }
 
 .side-drawer a:hover, .side-drawer a:active {
@@ -37,6 +37,10 @@
 
 .open {
     transform: translateX(0%);
+}
+
+.side-drawer-spacing {
+    flex: 1.0;
 }
 
 @media screen and (min-width: 600px) {
