--- a/my-ehr/src/componets/Footer/Footer.css
+++ b/my-ehr/src/componets/Footer/Footer.css
@@ -1,9 +1,11 @@
 .footer {
+    margin: 0px;
     width: 100%;
-    padding: 5px 20px;
     background-color: rgba(106,0,148);
 }
-
+.padding {
+    padding: 5px 20px;
+}
 .footer p {
     font-size: 1.0rem;
 }
