--- a/my-ehr/src/componets/pages/Home/Home.css
+++ b/my-ehr/src/componets/pages/Home/Home.css
@@ -1,8 +1,15 @@
 .background {
     background-image: linear-gradient(rgba(106,0,148), white);
     margin-top: 64px;
+    width: 100%;
+    height: 100%;
 }
-
+.container{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
 .home img {
     display: block;
     margin-top: -50px;
@@ -34,13 +41,4 @@
 
 .mission-statement strong {
     font-size: 1.5rem;
-}
-
-.hr{
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height: 10px; 
-    color: black;
-    position: absolute;
 }
