--- a/my-ehr/src/index.css
+++ b/my-ehr/src/index.css
@@ -1,11 +1,16 @@
 html {
   height: 100%;
+  width: 100%;
 }
-
+.root{
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
