--- a/my-ehr/src/componets/Navbar/Navbar.css
+++ b/my-ehr/src/componets/Navbar/Navbar.css
@@ -15,8 +15,6 @@
     padding: 0 1rem;
 }
 
-
-
 .nav-spacing {
     flex: 1.0;
 }
@@ -32,14 +30,23 @@
     padding: 0 0.5rem;
 }
 
-.navbar-items a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.3em;
-}
-.navbar-items a:hover, .navbar-items a:active {
+ .navbar-items button, .navbar-items a {
+   background-color: rgba(106,0,148);
+   color: white;
+   text-decoration: none;
+   border-width: 0px;
+   font-size: 1.3em;
+ }
+
+.navbar-items button:hover, .navbar-items a:hover {
     color: orange;
     text-decoration: none;
+    outline-style: none;
+}
+
+.navbar-items button:focus, .navbar-items button:focus {
+  text-decoration: none;
+  outline-style: none;
 }
 
 .logo a {
@@ -60,4 +67,3 @@
         width: 0;
     }
 }
-  
