Scroll to About and minor updates
Finished the scroll to about function and added some other minor updates.

--- a/my-ehr/src/componets/Navbar/Navbar.css
+++ b/my-ehr/src/componets/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'geo_sans_light';
+    src: local('geo_sans_light'), url(../../assets/fonts/geo_sans_light/GeosansLight.ttf) format('ttf');
+}
 .navbar {
     position: fixed;
     top: 0;
@@ -36,6 +40,7 @@
    text-decoration: none;
    border-width: 0px;
    font-size: 1.3em;
+   font-family: geo_sans_light;
  }
 
 .navbar-items button:hover, .navbar-items a:hover {
