--- a/my-ehr/src/componets/pages/Patient/Patient.css
+++ b/my-ehr/src/componets/pages/Patient/Patient.css
@@ -15,3 +15,13 @@
 .patient p {
     font-size: 1.3rem;
 }
+
+#title {
+  float:left;
+}
+
+#house {
+  width:20%;
+  margin-left: 60%;
+  margin-bottom: 2%;
+}
