--- a/my-ehr/src/componets/pages/AccountDirectory/Account/Account.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/Account/Account.css
@@ -1,25 +1,44 @@
 .container{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    margin-top: 64px;
-    padding: 0px;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  margin-top: 64px;
+  padding: 0px;
 }
 
 .account {
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-    padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  padding: 20px;
 }
 
-#house {
-  width:30%;
-  margin-bottom: 2%;
-  margin-left: 0%;
-  float: left;
+.account img {
+  width: 20%;
 }
 
-#hospital {
-  width:20%;
+.account .button{
+  display: block;
+  background-color: rgba(145, 61, 136, 1);
+  color: white;
+  width: 250px;
+  padding: 20px;
+  margin: 20px;
+  font-size: 1.3rem;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.5);
+}
+
+.account .button:hover{
+  background-color: rgba(145, 61, 136, 0.9);
+}
+
+.account .button:active {
+  box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.2);
+}
+
+.account a {
+  text-decoration: none;
 }
