--- a/my-ehr/src/componets/pages/AccountDirectory/PatientLogin/PatientLogin.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/PatientLogin/PatientLogin.css
@@ -1,19 +1,26 @@
 .patient-login{
     width: 100%;
     height: 100%;
+    background-image: linear-gradient(rgba(106,0,148), rgba(130,0,140),rgba(106,0,148));
+
 }
 .login-container {
+    min-width: 300px;
+    max-width: 400px;
     width: 50%;
-    max-width: 50%;
     height: 50%;
-    background: purple;
     padding: 20px;
-    transform: translate(50%, 0%);
-    border-radius: 10px;
+    box-shadow: 0 10px 20px 0 RGBA(0, 0, 0, 0.6);
+    background: white;
+
+}
+
+.patient-login > center{
+    padding: 20px;
 }
 
 .login-container h2{
-    color: white;
+    color: purple;
     text-align: center;
 }
 
@@ -21,12 +28,36 @@
     font-size: 1.3rem;
     text-align: center;
     width: 90%;
-    margin: 10px auto;
+    margin: 10px;
 }
 
-.login-container button{
+.login-container .button{
     font-size: 1.3rem;
     text-align: center;
     width: 90%;
-    margin: 10px auto;
+    margin: 10px;
+    background: purple;
+    color: white;
+    border-radius: 15px;
+    height: 30px;
+    box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.5);
+    text-align: center;
+    padding-top: 5px;
+}
+
+.login-container .button:hover{
+    cursor: pointer;
+}
+
+.login-container .button:active{
+    box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.2);
+}
+
+.login-container img{
+    width: 150px;
+    height: auto;
+}
+
+.login-container a{
+    text-decoration: none;
 }
