--- a/my-ehr/src/componets/pages/Provider/Provider.css
+++ b/my-ehr/src/componets/pages/Provider/Provider.css
@@ -27,16 +27,18 @@
 }
 
 .provider .button{
-    display: block;
+    display: table-cell;
+    flex: 1.0;
     background-color: rgba(145, 61, 136, 1);
     color: white;
     width: 250px;
-    padding: 20px;
-    margin: 20px;
+    height: 50px;
+    margin: 30px;
     font-size: 1.3rem;
     text-align: center;
+    vertical-align: middle;
     text-decoration: none;
-    border-radius: 20px;
+    border-radius: 25px;
     box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.5);
 }
 
@@ -50,6 +52,14 @@
 
 .provider a {
     text-decoration: none;
+    padding: 10px;
 }
+
+.button-row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 
 
