--- a/my-ehr/src/componets/pages/AccountDirectory/Account/Account.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/Account/Account.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  height: auto;
 }
 
 .account img {
@@ -47,6 +48,7 @@
 
 .account h1{
   font-size: 1.5rem;
+  padding-top: 20px;
 }
 
 .title {
