--- a/my-ehr/src/componets/pages/Provider/Provider.css
+++ b/my-ehr/src/componets/pages/Provider/Provider.css
@@ -1,15 +1,19 @@
 .container{
     width: 100%;
     height: 100%;
+    min-height: 85vh;
     margin: 0px;
     margin-top: 64px;
+    margin-bottom: 60px;
     padding: 0px;
+
 }
 
 .provider {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
+    max-width: 600px;
     padding: 20px;
 }
 
