--- a/my-ehr/src/componets/pages/AccountDirectory/PatientCreateAccount/PatientCreateAccount.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/PatientCreateAccount/PatientCreateAccount.css
@@ -1,6 +1,7 @@
 .patient-create-account {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    margin-bottom: -64px;
     background-image: linear-gradient(rgba(106,0,148), rgba(130,0,140),rgba(106,0,148));
 
 }
