--- a/my-ehr/src/componets/pages/Provider/Provider.css
+++ b/my-ehr/src/componets/pages/Provider/Provider.css
@@ -1,7 +1,6 @@
 .container{
     width: 100%;
-    height: 100%;
-    min-height: 85vh;
+    height: auto;
     margin: 0px;
     margin-top: 64px;
     margin-bottom: 60px;
