--- a/my-ehr/src/componets/pages/Root.css
+++ b/my-ehr/src/componets/pages/Root.css
@@ -4,7 +4,7 @@
 }
 
 .app{
-    font-family: 'geo_sans_light';
+    font-family: "Lato", "sans-serif";
     height: 100%;
     width: 100%;
     padding: 0px;
