--- a/my-ehr/src/componets/pages/AccountDirectory/Account/Account.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/Account/Account.css
@@ -1,11 +1,3 @@
-.container{
-  width: 100%;
-  height: auto;
-  margin: 0px;
-  margin-top: 64px;
-  padding: 0px;
-}
-
 .account {
   margin-left: auto;
   margin-right: auto;
@@ -15,31 +7,16 @@
   flex-wrap: wrap;
   justify-content: space-around;
   height: auto;
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
-.account img {
-  max-width: 300px;
-  min-width: 200px;
-  width: 50%;
-  height: auto;
-  margin: 0 auto;
+.title > .logo{
+  width: 100px;
+  float: left;
+  display: block;
+  margin-left: 20px;
 }
-
-.account .card{
-  max-width: 340px;
-  min-width: 240px;
-  width: 60%;
-  background-color: rgba(20, 20, 20, 0.3);
-  margin: 20px;
-  border-radius: 20px;
-  flex: 1;
-  box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.3);
-}
-
-.account .card:hover {
-  background-color: rgba(20, 20, 20, 0.2);
-}
-
 .account h2{
   text-align: center;
   font-size: 1.4rem;
@@ -48,13 +25,32 @@
 
 .account h1{
   font-size: 1.5rem;
-  padding-top: 20px;
+  margin-top: 50px;
+  padding: 0;
 }
 
 .title {
   padding: 10px 40px;
 }
-
+.title h1 {
+  margin-bottom: 10px;
+}
+.title p {
+  padding: 0px;
+  margin: 0px;
+  font-size: 1.1rem;
+}
 .account a {
   text-decoration: none;
+  color: black;
+}
+@media screen and (max-width: 1350px) {
+  .account {
+      grid-template-columns: auto;
+  }
+}
+@media screen and (max-width: 530px) {
+  .title > .logo{
+    display: none;
+  }
 }
