--- a/my-ehr/src/componets/pages/AccountDirectory/PatientLogin/PatientLogin.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/PatientLogin/PatientLogin.css
@@ -1,7 +1,6 @@
 .patient-login{
     width: 100%;
-    height: 100vh;
-    margin-bottom: -64px;
+    height: 100%;
     background-image: linear-gradient(rgba(106,0,148), rgba(130,0,140),rgba(106,0,148));
 
 }
@@ -11,6 +10,7 @@
     width: 50%;
     height: 50%;
     padding: 20px;
+    margin: 50px;
     box-shadow: 0 10px 20px 0 RGBA(0, 0, 0, 0.6);
     background: white;
 
