--- a/my-ehr/src/componets/pages/Home/Home.css
+++ b/my-ehr/src/componets/pages/Home/Home.css
@@ -1,14 +1,8 @@
 .background {
-    background-image: linear-gradient(rgba(106,0,148), white);
+    background-image: linear-gradient(rgb(106,0,148), white);
     margin-top: 64px;
     width: 100%;
     height: 100%;
-}
-.container{
-    width: 100%;
-    height: auto;
-    margin: 0px;
-    padding: 0px;
 }
 .home img {
     display: block;
@@ -55,7 +49,61 @@
     height: 50vw;
     max-width: 800px;
     max-height: 500px;
+    margin-bottom: 50px;
 }
 .health h1 {
+    color: white;
+    padding: 20px;
     margin-left: 20px;
 }
+.health{
+    width: 100%;
+    background-color: rgb(106,0,148);
+}
+
+
+
+
+
+.learn-more {
+    width: 100%;
+    background-color: white;
+}
+.account-type{
+    padding: 20px;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+}
+.learn-more h1 {
+    padding: 20px;
+}
+.learn-more .card{
+    background-color: rgb(230,230,230);
+    border-radius: 10px;
+    padding: 20px;
+    height: 300px;
+}
+.learn-more .card:hover{
+    background-color: rgb(220,220,220);
+}
+.learn-more .card-image {
+    display: block;
+    width: 50%;
+    min-width: 150px;
+    max-width: 250px;
+    margin: 0 auto;
+}
+.learn-more .card img {
+    width: 100%;
+}
+.learn-more a {
+    text-decoration: none;
+    color: black;
+}
+@media screen and (max-width: 600px) {
+    .account-type{
+        grid-template-columns: auto;
+    }
+}
+
