--- a/my-ehr/src/componets/pages/Patient/Patient.css
+++ b/my-ehr/src/componets/pages/Patient/Patient.css
@@ -1,17 +1,16 @@
-.container{
-    width: 100%;
-    height: auto;
-    margin: 0px;
-    margin-top: 64px;
-    padding: 0px;
-}
-
 .patient {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
-    max-width: 700px;
+    max-width: 600px;
     padding: 20px;
+    background-color: rgb(230,230,230);
+    border-radius: 20px;
+    margin-bottom: 20px;
+
+}
+.patient:hover {
+    background-color: rgb(220,220,220);
 }
 .patient p {
     font-size: 1.3rem;
