--- a/my-ehr/src/componets/pages/Provider/Provider.css
+++ b/my-ehr/src/componets/pages/Provider/Provider.css
@@ -1,19 +1,16 @@
-.container{
-    width: 100%;
-    height: auto;
-    margin: 0px;
-    margin-top: 64px;
-    margin-bottom: 60px;
-    padding: 0px;
-
-}
-
 .provider {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
     max-width: 600px;
     padding: 20px;
+    background-color: rgb(230,230,230);
+    border-radius: 20px;
+    margin-bottom: 20px;
+
+}
+.provider:hover {
+    background-color: rgb(220,220,220);
 }
 
 .provider p {
@@ -56,6 +53,7 @@
 .provider a {
     text-decoration: none;
     padding: 10px;
+    color: black;
 }
 
 .button-row{
@@ -63,6 +61,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
 
 
 
