--- a/my-ehr/src/componets/pages/About/About.css
+++ b/my-ehr/src/componets/pages/About/About.css
@@ -1,10 +1,9 @@
 .about {
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: rgb(235,235,235);
+    margin: 0;
     margin-top: 0px;
-    width: 90%;
-    padding: 20px;
+    padding: 5px 0px;
+    width: 100%;
 }
 
 .about p {
@@ -59,4 +58,12 @@
     margin: 0px;
     width: 100%;
     height: auto;
+}
+.card {
+    background-color: white;
+    width: 90%;
+    margin: 50px auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px 0 RGBA(0, 0, 0, 0.4);
 }
