--- a/my-ehr/src/componets/pages/Provider/Provider.css
+++ b/my-ehr/src/componets/pages/Provider/Provider.css
@@ -7,6 +7,7 @@
     background-color: rgb(230,230,230);
     border-radius: 20px;
     margin-bottom: 20px;
+    position: relative;
 
 }
 .provider:hover {
@@ -15,6 +16,8 @@
 
 .provider p {
     font-size: 1.3rem;
+    margin-bottom: 80px;
+
 }
 
 .provider img {
@@ -60,8 +63,16 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    position: absolute;
+    bottom: 20px;
 }
 
 
 
 
+@media screen and (max-width: 641px) {
+   .provider p {
+       margin-bottom: 160px;
+   }
+    
+}
