--- a/my-ehr/src/componets/pages/Root.css
+++ b/my-ehr/src/componets/pages/Root.css
@@ -21,3 +21,10 @@
     background-color: rgb(200, 200, 200);
 
 }
+.hidden {
+    display: none;
+}
+.card {
+    border-radius: 10px;
+    box-shadow: 0 10px 20px 0 RGBA(0, 0, 0, 0.4);
+}
