--- a/my-ehr/src/componets/pages/Team/Team.css
+++ b/my-ehr/src/componets/pages/Team/Team.css
@@ -14,7 +14,7 @@
 
 .team-grid {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     padding: 0px 20px;
     margin: 10px;
@@ -78,7 +78,7 @@
 
 @media screen and (max-width: 1400px) {
     .team-grid {
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
     }
     .bio-card {
         width: 45vw;
@@ -87,7 +87,7 @@
 
 @media screen and (max-width: 1024px) {
     .team-grid {
-        grid-template-columns: auto;
+        grid-template-columns: 1fr;
     }
     .bio-card {
         width: 80vw;
