Updated colors to be global variables

--- a/my-ehr/src/componets/Footer/Footer.css
+++ b/my-ehr/src/componets/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     margin: 0px;
     width: 100%;
-    background-color: rgba(106,0,148);
+    background-color: var(--primary);
 }
 .padding {
     padding: 5px 20px;
