--- a/my-ehr/src/componets/Backdrop/Backdrop.css
+++ b/my-ehr/src/componets/Backdrop/Backdrop.css
@@ -4,6 +4,7 @@
     left: 0;
     height: 100%;
     width: 100%;
+    background: rgb(50, 50, 50);
     background: rgba(0, 0, 0, 0.5);
     z-index: 100;
 }
