--- a/my-ehr/src/componets/pages/About/About.css
+++ b/my-ehr/src/componets/pages/About/About.css
@@ -1,5 +1,5 @@
 .about {
-    background-color: rgb(235,235,235);
+    background-color: var(--background-primary);
     margin: 0;
     margin-top: 0px;
     padding: 5px 0px;
@@ -59,11 +59,12 @@
     height: auto;
 }
 .card {
-    background-color: white;
+    background-color: var(--background-secondary);
     margin: 50px 50px;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 10px 20px 0 RGBA(0, 0, 0, 0.4);
+    box-shadow: 0 1px 2px 0 rgb(0, 0, 0);
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.4);
 }
 .about .card .line-break {
     width: 100%;
