--- a/my-ehr/src/componets/pages/AccountDirectory/PatientCreateAccount/PatientCreateAccount.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/PatientCreateAccount/PatientCreateAccount.css
@@ -1,7 +1,7 @@
 .patient-create-account {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba(106,0,148), rgba(130,0,140),rgba(106,0,148));
+    background-image: linear-gradient(var(--primary), var(--primary-accent),var(--primary));
 
 }
 .patient-create-account-container {
@@ -10,7 +10,8 @@
     width: 50%;
     height: 50%;
     padding: 20px;
-    box-shadow: 0 10px 20px 0 RGBA(0, 0, 0, 0.6);
+    box-shadow: 0 10px 20px 0 rgb(0, 0, 0);
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.6);
     background: white;
     margin-bottom: 150px;
 
@@ -21,7 +22,7 @@
 }
 
 .patient-create-account-container h2{
-    color: purple;
+    color: var(--primary);
     text-align: center;
 }
 
@@ -37,11 +38,12 @@
     text-align: center;
     width: 90%;
     margin: 10px;
-    background: purple;
+    background: var(--primary);
     color: white;
     border-radius: 15px;
     height: 30px;
-    box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px 0 rgb(0, 0, 0);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
     text-align: center;
     padding-top: 5px;
 }
@@ -51,7 +53,8 @@
 }
 
 .patient-create-account .button:active{
-    box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 rgb(0, 0, 0);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .patient-create-account img{
@@ -61,6 +64,6 @@
 
 .patient-create-account a{
     text-decoration: none;
-    color: rgba(106,0,148);
+    color: var(--primary);
 
 }
