--- a/my-ehr/src/componets/pages/Home/Home.css
+++ b/my-ehr/src/componets/pages/Home/Home.css
@@ -1,5 +1,5 @@
 .background {
-    background-image: linear-gradient(rgb(106,0,148), white);
+    background-image: linear-gradient( var(--primary), white);
     margin-top: 64px;
     width: 100%;
     height: 100%;
@@ -73,7 +73,7 @@
 .health{
     width: 100%;
     min-height: 100vh;
-    background-color: rgb(106,0,148);
+    background-color:  var(--primary);
 }
 
 
@@ -93,13 +93,14 @@
     padding: 20px;
 }
 .learn-more .card{
-    background-color: rgb(230,230,230);
+    background-color: var(--background-primary);
     border-radius: 10px;
     padding: 20px;
     height: 300px;
 }
 .learn-more .card:hover{
-    background-color: rgb(220,220,220);
+    -webkit-filter: brightness(0.95);
+    filter: brightness(0.95);
 }
 .learn-more .card-image {
     display: block;
