--- a/my-ehr/src/componets/pages/Provider/Provider.css
+++ b/my-ehr/src/componets/pages/Provider/Provider.css
@@ -4,14 +4,15 @@
     width: 90%;
     max-width: 600px;
     padding: 20px;
-    background-color: rgb(230,230,230);
+    background-color: var(--background-secondary);
     border-radius: 20px;
     margin-bottom: 20px;
     position: relative;
 
 }
 .provider:hover {
-    background-color: rgb(220,220,220);
+    -webkit-filter: brightness(0.99);
+    filter: brightness(0.99);
 }
 
 .provider p {
@@ -32,7 +33,7 @@
 .provider .button{
     display: table-cell;
     flex: 1.0;
-    background-color: rgba(145, 61, 136, 1);
+    background-color: var(--primary-accent);
     color: white;
     width: 250px;
     height: 50px;
@@ -42,15 +43,18 @@
     vertical-align: middle;
     text-decoration: none;
     border-radius: 25px;
-    box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px 0 rgb(0, 0, 0);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
 
 .provider .button:hover{
-    background-color: rgba(145, 61, 136, 0.9);
+    -webkit-filter: brightness(0.95);
+    filter: brightness(0.95);
 }
 
 .provider .button:active {
-    box-shadow: 0 8px 16px 0 RGBA(0, 0, 0, 0.2);
+    box-shadow: 0 1px 2px 0 rgb(0, 0, 0);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .provider a {
