--- a/my-ehr/src/componets/pages/AccountDirectory/ProviderPortal/ProviderPortal.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/ProviderPortal/ProviderPortal.css
@@ -1,24 +1,100 @@
 .provider-portal {
     margin-top: -64px;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 
 
 .dashboard {
-    display: flex;
+    padding: 20px;
+    padding-top: 64px;
     background-color: var(--background-primary);
 }
-.provider-content {
 
+
+.provider-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 20px;
+    padding: 0px 20px;
+    margin: 0px;
 }
 
-.side-menu{
-    height: 100vh;
-    margin: 0;
-    background-color: var(--primary-accent);
+.provider-grid .rt-td{
+    text-emphasis: center;
 }
+
+.transaction-count-table {
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+
+.transaction-count-table ul {
+    list-style: none;
+}
+.transaction-count-table ul li {
+    padding: 5px;
+    font-size: 20px;
+}
+
+.provider-header {
+    width: 100%;
+}
+
+.account-total-card .line-break{
+    margin-bottom: 0px;
+}
+
+.account-total-card {
+    text-align: center;
+    max-width: 300px;
+    max-height: 250px;
+    margin: 0px;
+}
+.transaction-count-table .transaction-label {
+    text-align: left;
+}
+.transaction-card {
+    margin: 0px;
+}
+
+.account-total-card strong {
+    margin-left: 10px;
+}
+
+
 .provider-content h1{
-    padding: 50px;
+    padding: 10px;
+}
+
+.approved li{
+    background-color: rgb(210, 245, 200);
+}
+
+.denied li{
+    background-color: rgb(255, 210, 210);
+}
+
+.pending li{
+    background-color: rgb(255, 250, 210);
+}
+
+
+
+
+@media screen and (max-width: 1024px) {
+    .provider-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+   
+}
+
+@media screen and (max-width: 600px) {
+    .provider-grid {
+        grid-template-columns: 1fr;
+    }
+   
 }
 
