--- a/my-ehr/src/componets/pages/AccountDirectory/ProviderPortal/ProviderPortalNavbar.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/ProviderPortal/ProviderPortalNavbar.css
@@ -5,6 +5,7 @@
     display: flex;
     width: 100%;
     height: 64px;
+    margin-bottom: 64px;
     align-items: center;
 }
 .secondary-navbar ul {
