--- a/my-ehr/src/componets/Navbar/Navbar.css
+++ b/my-ehr/src/componets/Navbar/Navbar.css
@@ -50,7 +50,14 @@
     color: white;
     text-decoration: none;
     font-size: 2.3rem;
-    margin-left: 0.5rem;
+    margin-left: 4rem;
+}
+
+.logo img {
+  position: absolute;
+  top: -10px;
+  left: -0.5px;
+  width:70px;
 }
 
 
