--- a/my-ehr/src/componets/pages/Home/Home.css
+++ b/my-ehr/src/componets/pages/Home/Home.css
@@ -5,10 +5,9 @@
     height: 100%;
 }
 .home img {
-    display: block;
-    margin-top: -50px;
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    top: 20%;
+    left: 60%;
     width: 30%;
     min-width: 300px;
 }
@@ -29,8 +28,10 @@
     margin: 10px 10px;
     border-radius: 10px;
     margin-bottom: 10px;
-    text-align: center;
+    text-align: left;
+    width:70%;
 }
+
 .stat {
     background: rgba(50,50,50,0.85);
     color: white;
@@ -45,7 +46,7 @@
 }
 
 .mission-statement p {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: lighter;
 }
 
@@ -131,7 +132,7 @@
 }
 
 #hospital {
-    background-image: url("../../../assets/images/hospitalBuilding.jpg")
+    background-image: url("../../../assets/images/stars.jpg")
 }
 #patientHelp {
     background-image: url("../../../assets/images/patientHelp.jpg")
