--- a/my-ehr/src/componets/pages/AccountDirectory/ProviderPortal/ProviderPortal.css
+++ b/my-ehr/src/componets/pages/AccountDirectory/ProviderPortal/ProviderPortal.css
@@ -10,7 +10,11 @@
     padding-top: 64px;
     background-color: var(--background-primary);
 }
+.place-holder-card {
+    visibility: hidden;
+    display: none;
 
+}
 
 .provider-grid {
     display: grid;
@@ -114,20 +118,133 @@
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
+.rt-tr:hover {
+    cursor: pointer;
+}
 
 
 
+.modal {
+    display: none; 
+    width: 100%; 
+    height: 100%; 
+    position: fixed; 
+    z-index: 100; 
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    overflow: hidden; 
+    background-color: rgb(40,40,40); 
+    background-color: rgba(40,40,40,0.6); 
 
-@media screen and (max-width: 1024px) {
+}
+
+.modal-content {
+    background-color: rgb(245,245,245);
+    margin: auto;
+    padding: 20px;
+    border: 1px solid rgb(120,120,120);
+    box-shadow: 1px 1px 1px rgb(100,100,100);
+    box-shadow: 3px 3px 2px rgba(20,20,20,0.4);
+    width: 80%;
+    min-height: 30%;
+    max-width: 720px;
+}
+.close {
+    color: rgb(100,100,100);
+    float: right;
+    font-size: 36px;
+    line-height: 24px;
+    width: 24px;
+    text-align: center;
+    font-weight: bold;
+}
+  
+.close:hover, .close:focus {
+    color: rgb(200, 0, 0);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.row h3 {
+    width: 120px;
+    display: inline-block;
+    
+}
+.modal-header-button {
+    
+    float: right;
+    margin-right: 20px;
+    border-radius: 50%;
+    padding: 8px;
+    position: relative;
+}
+
+.modal-header-button:hover .tooltip {
+    transition-delay: 1s;
+    visibility: visible;
+}
+
+.modal-header-button img{
+    width: 24px;
+    height: 24px;
+    margin: auto auto;
+}
+
+.modal-header-button:hover {
+    background-color: rgb(230,230,230);
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.modal-row strong, .modal-row span, .modal-row h3{
+    line-height: 32px;
+    font-size: 32px;
+    margin-left: 20px;
+}
+.modal-row h3 {
+    width: 80%;
+}
+.modal-row {
+    margin: 16px auto;
+}
+
+.tooltip {
+    visibility: hidden;
+    background-color: rgba(50,50,50,0.7);
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 0%;
+    margin-left: 0%;
+    font-size: 12px;
+  }
+  .modal-header-button:hover .tooltip {
+    transition-delay: 1s;
+    visibility: visible;
+}
+
+
+@media screen and (max-width: 1148px) {
     .provider-grid {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 2fr;
+    }
+    .place-holder-card {
+        display: block;
     }
    
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 848px) {
     .provider-grid {
         grid-template-columns: 1fr;
+    }
+    .place-holder-card {
+        display: none;
     }
    
 }
